# scrapers

./: README.md  pyproject.toml
scrapers/scripts/: astra_base_scraper.py  create_collection.py  load_data.py  split_q_a.py
