[tool.poetry]
name = "scrapers"
version = "0.1.0"
description = ""
authors = ["wellsrl <ryan@miter.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
astrapy = "0.7.0"
python-dotenv = "1.0.0"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "0.20.0"}
openai = "1.8.0"
tiktoken = "0.5.2"
langchain-openai = "0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
